# quasar-software

./: .directory  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.2eb7b51  Doxyfile  QuaSAR-UI.pro  QuaSAR.desktop  README.md  TODO.md  appiconwin32.aps  quasar.qdocconf  resources - Ярлык.lnk  style.astylerc  ui-reference.sai2
.gitlab/: alse.yml  (+2 more)
libplugin/: CMakeLists.txt  plugin.h  plugin.pro  pluginDataTypes.h  pluginHead.cpp  pluginHead.h  pluginHostAPI.cpp  pluginHostAPI.h  pluginInterface.h
libplugin/Terminal/: Terminal.cpp  Terminal.h  Terminal.pro
libplugin/Terminal/QVTerminal/: qvterminal.cpp  qvterminal.h  qvtline.h
libplugin/example_plugin/: Terminal.cpp  Terminal.h  Terminal.pro
libs/libabstract/: CMakeLists.txt
libs/libabstract/include/Abstract/: IColorable  INameable
libs/libabstract/src/: icolorable.h  inameable.h
libs/libquasarsdk/: CMakeLists.txt  documentation.dox  execd_manual.dox  planner_manual.dox  quasarsdk.qrc
libs/libquasarsdk/include/QuasarSDK/: API  CRC  Common  Config  Enums  ImageDatagrams  Neural  PlannerDatagrams  Register
libs/libquasarsdk/include/QuasarSDK/Execd/: ArgumentList  Data  InSocket  OutSocket
libs/libquasarsdk/include/QuasarSDK/FSend/: TCP  UDP
libs/libquasarsdk/include/QuasarSDK/Map/: BasicMapObject  FGSMapObject  IMapObject  ISARImage  MapCompleteImage  MapImage  MapImageSegment  ScalableMapObject  ScreenMapObject
libs/libquasarsdk/include/QuasarSDK/Private/: BaseUDPSocket  SeamlessUDPSocket
libs/libquasarsdk/include/QuasarSDK/Telemetry/: Data  PlannerDatagram  Socket  TelemetryDatagram
libs/libquasarsdk/include/QuasarSDK/Utility/: CRC16  Common  OutputRedirect  Ping
libs/libquasarsdk/rc/: sdk-config.json
libs/libquasarsdk/src/: FRegister.c++  FRegister.h  documentation.dox  register.c++
libs/libquasarsdk/src/IO/: CBase64Object.c++  CBase64Object.h  CBasicFile.h  CFile.h  CMessageModel.c++  CMessageModel.h  CSARMessage.h  CSAROutputModel.c++  CSAROutputModel.h  IFile.h  IMessage.h  base64object.c++  base64object.h  basicfile.h  draftfile.c++  draftfile.h  ifile.h  imagedatagrams.h  imessage.h  messagemodel.c++  messagemodel.h  neuraldata.h  neuralparser.c++  neuralparser.h  sarmessage.h  saroutputmodel.c++  saroutputmodel.h
libs/libquasarsdk/src/Map/: CAbstractMapItem.c++  CAbstractMapItem.h  CAbstractMapObject.c++  CAbstractMapObject.h  CFGSMapItem.c++  CFGSMapItem.h  CFGSMapObject.c++  CFGSMapObject.h  CMapCompleteImage.c++  CMapCompleteImage.h  CMapImage.h  CMapImageSegment.c++  CMapImageSegment.h  CScalableMapItem.h  CScalableMapObject.h  CScreenMapItem.h  CScreenMapObject.h  IMapItem.h  IMapObject.h  ISARImage.h  basicmapobject.c++  basicmapobject.h  fgsmapobject.c++  fgsmapobject.h  imapobject.h  isarimage.h  mapcompleteimage.c++  mapcompleteimage.h  mapimage.c++  mapimage.h  mapimagesegment.c++  mapimagesegment.h  scalablemapobject.h  screenmapobject.h
libs/libquasarsdk/src/Map/clion/: inheritance_concept.mmd
libs/libquasarsdk/src/Networking/: CBaseUDPSocket.c++  CConfig.c++  CEnums.h  CExecdArgumentParser.c++  CExecdSocket.c++  CExecdSocket.h  COutputRedirectServer.c++  COutputRedirectServer.h  COutputSocket.c++  CPingTester.c++  CPingTester.h  CQuasarAPI.c++  CQuasarAPI.h  CRemoteData.c++  CRemoteData.h  CSeamlessUDPSocket.c++  CSeamlessUDPSocket.h  CStripSocket.c++  CStripSocket.h  CTCPServer.c++  CTCPServer.h  CTelemetry.c++  CTelemetrySocket.c++  FCRC16.c++  FCRC16.h  FCommon.c++  IConnectable.h  SPlannerDatagram.h  STelemetryDatagram.h  baseudpsocket.c++  baseudpsocket.h  common_func.c++  common_func.h  crc16.c++  execdparser.c++  execdparser.h  execdsocket.c++  execdsocket.h  iconnectable.h  network_config.c++  (+28 more)
libs/libquasarsdk/src/Processing/: SImageDatagrams.h  SImageMetadata.h
libs/libquasarsdk/src/interfaces/: quasarsdk_iconnectable.h
libs/libquasarsdk/src/private/: quasarsdk_baseudpsocket.c++  quasarsdk_baseudpsocket.h  quasarsdk_lfsudpsocket.c++  quasarsdk_lfsudpsocket.h
libs/libquasarsdk/src/public/: quasarsdk_config.c++  quasarsdk_config.h  quasarsdk_enums.c++  quasarsdk_enums.h  quasarsdk_quasarinterface.c++  quasarsdk_quasarinterface.h
libs/libquasarsdk/src/public/execd/: quasarsdk_execdargumentparser.c++  quasarsdk_execdargumentparser.h  quasarsdk_execdsocket.c++  quasarsdk_execdsocket.h  quasarsdk_outputsocket.c++  quasarsdk_outputsocket.h  quasarsdk_remotedata.c++  quasarsdk_remotedata.h
libs/libquasarsdk/src/public/fsend/: quasarsdk_stripsocket.c++  quasarsdk_stripsocket.h  quasarsdk_tcpserver.c++  quasarsdk_tcpserver.h
libs/libquasarsdk/src/public/navd2/: quasarsdk_plannerdatagram.h  quasarsdk_telemetry.c++  quasarsdk_telemetry.h  quasarsdk_telemetrydatagram.h  quasarsdk_telemetrysocket.c++  quasarsdk_telemetrysocket.h
libs/libquasarsdk/src/public/utl/: quasarsdk_common.c++  quasarsdk_common.h  quasarsdk_crc16.c++  quasarsdk_crc16.h  quasarsdk_outputredirectserver.c++  quasarsdk_outputredirectserver.h  quasarsdk_pingtester.c++  quasarsdk_pingtester.h
libs/libscenegraph/: CMakeLists.txt
libs/libscenegraph/include/Scenegraph/: Register
libs/libscenegraph/include/Scenegraph/Legacy/: ColorProvider
libs/libscenegraph/src/Core/: FRegisterQML.c++  FRegisterQML.h
libs/libscenegraph/src/Utils/: CColorProvider.c++  CColorProvider.h
libs/lpvl/: CMakeLists.txt
libs/lpvl/include/LPVL/: GLGeometry  Math  MatrixPlot  Register  global
libs/lpvl/src/geometry/: lpvlglvertex.h
libs/lpvl/src/global/: lpvlglobal.h  lpvlmath.c++  lpvlmath.h  lpvlregister.c++  lpvlregister.h
libs/lpvl/src/quick/: lpvlmatrixplot.c++  lpvlmatrixplot.h
libs/quasar-emulator/: CMakeLists.txt
libs/quasar-emulator/resources/: resources.qrc
libs/quasar-emulator/src/cpp/: main.c++
libs/quasar-emulator/src/qml/: Main.qml  qml.qrc
services/UpdateService/: CMakeLists.txt
services/UpdateService/src/c++/: entry.c++  entry.h  main.c++
services/UpdateService/src/cmake/: QuaSAR.desktop
src/c++/sdk/: CMakeLists.txt
src/cpp/global/: CMakeLists.txt
src/cpp/global/include/: definitions.h  definitions.h++
(+6148 files in other folders)
